apollo-router/tests/snapshots/apollo_otel_traces__batch_trace_id.snap
---
source: apollo-router/tests/apollo_otel_traces.rs
expression: report
---
resourceSpans:
  - resource:
      attributes:
        - key: apollo.client.host
          value:
            stringValue: "[redacted]"
        - key: apollo.client.uname
          value:
            stringValue: "[redacted]"
        - key: apollo.graph.ref
          value:
            stringValue: test
        - key: apollo.router.id
          value:
            stringValue: "[redacted]"
        - key: apollo.schema.id
          value:
            stringValue: "[redacted]"
        - key: apollo.user.agent
          value:
            stringValue: "[redacted]"
      droppedAttributesCount: 0
      entityRefs: []
    scopeSpans:
      - scope:
          name: apollo-router
          version: "[version]"
          attributes: []
          droppedAttributesCount: 0
        spans:
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: query one
            kind: 2
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo_private.duration_ns
                value:
                  stringValue: "[redacted]"
              - key: apollo_private.http.request_headers
                value:
                  stringValue: "{\"send-header\":[\"Header value\"]}"
              - key: apollo_private.http.response_headers
                value:
                  stringValue: "[redacted]"
              - key: apollo_private.request
                value:
                  boolValue: true
              - key: client.name
                value:
                  stringValue: ""
              - key: client.version
                value:
                  stringValue: ""
              - key: http.request.method
                value:
                  stringValue: POST
              - key: http.response.status_code
                value:
                  intValue: "200"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 1
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: supergraph
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo_private.graphql.variables
                value:
                  stringValue: "[redacted]"
              - key: apollo_private.operation_signature
                value:
                  stringValue: "[redacted]"
              - key: apollo_private.query.aliases
                value:
                  intValue: "0"
              - key: apollo_private.query.depth
                value:
                  intValue: "4"
              - key: apollo_private.query.height
                value:
                  intValue: "7"
              - key: apollo_private.query.root_fields
                value:
                  intValue: "1"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: execution
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: graphql.operation.type
                value:
                  stringValue: query
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: sequence
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: flatten
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: graphql.path
                value:
                  stringValue: /topProducts/@/reviews/@/author
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: fetch
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.subgraph.name
                value:
                  stringValue: accounts
              - key: apollo_private.sent_time_offset
                value:
                  stringValue: "[redacted]"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: subgraph
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo_private.ftv1
                value:
                  stringValue: "[redacted]"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: subgraph_request
            kind: 3
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.subgraph.name
                value:
                  stringValue: accounts
              - key: graphql.operation.name
                value:
                  stringValue: "[redacted]"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: http_request
            kind: 3
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: http.response.status_code
                value:
                  intValue: "200"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: supergraph
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo_private.graphql.variables
                value:
                  stringValue: "[redacted]"
              - key: apollo_private.operation_signature
                value:
                  stringValue: "[redacted]"
              - key: apollo_private.query.aliases
                value:
                  intValue: "0"
              - key: apollo_private.query.depth
                value:
                  intValue: "4"
              - key: apollo_private.query.height
                value:
                  intValue: "7"
              - key: apollo_private.query.root_fields
                value:
                  intValue: "1"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: execution
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: graphql.operation.type
                value:
                  stringValue: query
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: sequence
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: flatten
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: graphql.path
                value:
                  stringValue: /topProducts/@/reviews/@/author
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: fetch
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.subgraph.name
                value:
                  stringValue: accounts
              - key: apollo_private.sent_time_offset
                value:
                  stringValue: "[redacted]"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: subgraph
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo_private.ftv1
                value:
                  stringValue: "[redacted]"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: rhai_plugin
            kind: 1
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes: []
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: subgraph_request
            kind: 3
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: apollo.subgraph.name
                value:
                  stringValue: accounts
              - key: graphql.operation.name
                value:
                  stringValue: "[redacted]"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
          - traceId: "[trace_id]"
            spanId: "[span_id]"
            traceState: ""
            parentSpanId: "[span_id]"
            flags: 257
            name: http_request
            kind: 3
            startTimeUnixNano: "[start_time]"
            endTimeUnixNano: "[end_time]"
            attributes:
              - key: http.response.status_code
                value:
                  intValue: "200"
            droppedAttributesCount: 0
            events: []
            droppedEventsCount: 0
            links: []
            droppedLinksCount: 0
            status:
              message: ""
              code: 0
        schemaUrl: ""
    schemaUrl: ""
